# CJAJB

./: LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: django.yml
api/: pyproject.toml
api/api/api/: settings.py  urls.py
api/api/cjajb/: apps.py  serializers.py  urls.py  views.py
api/api/cjajb/migrations/: 0001_initial.py  0002_athlete.py  0003_championship_alter_athlete_team.py  0004_venue_meeting.py  0005_category_alter_meeting_championship_and_more.py  0006_rename_date_meeting_start_date_and_more.py  0007_discipline_scale_competition.py
api/api/cjajb/models/: athlete.py  category.py  championship.py  competition.py  discipline.py  meeting.py  scale.py  team.py  venue.py
