[tool.poetry]
name = "api"
version = "0.1.0"
description = "Backend for athletics championship managment"
authors = ["Cyrille Polier <rodama20@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
