[tool.poetry]
name = "api"
version = "0.1.0"
description = "Backend for athletics championship managment"
authors = ["Cyrille Polier <rodama20@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.1"
dj-database-url = "^2.1.0"
django-rest-knox = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
